<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_my_dreams">

    <fragment
        android:id="@+id/navigation_my_dreams"
        android:name="com.example.dreamisland.ui.myDreams.MyDreamsFragment"
        android:label="@string/title_my_dreams"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_my_sleep"
        android:name="com.example.dreamisland.ui.mySleep.MySleepFragment"
        android:label="@string/title_my_sleep"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_square"
        android:name="com.example.dreamisland.ui.square.SquareFragment"
        android:label="@string/title_square"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.dreamisland.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notifications" />
</navigation>